--- a/index.html
+++ b/index.html
@@ -14,10 +14,9 @@
     <header class="header">
 		<h1 class="logo"><a href="index.html">Pragash Salesforce</a></h1>
       <ul class="main">
-          <li><a href="#">Home</a></li>
-          <li><a href="#">About</a></li>
-          <li><a href="#">Portfolio</a></li>
-          <li><a href="#">Contact</a></li>
+          <li><a href="index.html">Home</a></li> 
+          <li><a href="articles.html">Articles</a></li>
+          <li><a href="contact.html">Contact</a></li>
       </ul>
 	</header> 
     </div>
